--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@ project(emscripten_sdl2_framework VERSION 0.1.0 LANGUAGES C CXX)
 
 include(CTest)
 enable_testing()
-
+find_package(SDL2 REQUIRED)
+aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/src sources)
+# set(OPENGLES2_LIBRARY /usr/lib/x86_64-linux-gnu/libGLESv2.so)
 set(CMAKE_CXX_STANDARD 17)
 if(ENABLE_CLANG_TIDY)
   set(CMAKE_CXX_CLANG_TIDY clang-tidy -extra-arg=-std=gnu++${CMAKE_CXX_STANDARD} --config-file ${CMAKE_CURRENT_SOURCE_DIR}/.clang-tidy --header-filter=${CMAKE_CURRENT_SOURCE_DIR}/[src|test]*.*hpp)
@@ -11,7 +13,8 @@ if(ENABLE_CLANG_TIDY)
       set(CMAKE_CXX_CLANG_TIDY ${CMAKE_CXX_CLANG_TIDY} -warnings-as-errors=*)
   endif()
 endif()
-add_library(emscripten_sdl2_framework emscripten_sdl2_framework.cpp)
+add_library(emscripten_sdl2_framework ${sources})
+target_link_libraries(emscripten_sdl2_framework SDL2 ${OPENGLES2_LIBRARY})
 add_subdirectory(test)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
